--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "doc-draft",
+  "name": "docs-draft",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.7.3",
+    "@clerk/themes": "^2.1.36",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "jsm-editor": "^0.0.12",
